
	* twittering-mode.el: `twittering-visit-timeline' initializes
	global variables if necessary.
	(twittering-visit-timeline): initialize global variables and
	prepare account information.
	(twittering-mode): delegate the initialization to
	`twittering-visit-timeline'.
	(twittering-mode-init-global): renamed
	`twittering-initialize-global-variables-if-necessary'.

2010-04-24  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Reimplement indicators.
	(twittering-ssl-indicator-image): new constant.
	(twittering-modeline-ssl): defined as a constant, which is
	initialized on loading `twittering-mode.el'.
	(twittering-ssl-image, twittering-ssl-indicator): removed.
	(twittering-ssl-icon): removed.
	(twittering-active-image, twittering-inactive-image): removed.
	(twittering-active-indicator, twittering-inactive-indicator):
	removed.
	(twittering-icon-directory): removed.
	(twittering-active-icon, twittering-inactive-icon): removed.
	(twittering-display-image-p): removed.
	(twittering-init-mode-line-icons): removed. Images are initialized
	as constants on loading `twittering-mode.el'.
	(twittering-active-indicator-image): new constant.
	(twittering-inactive-indicator-image): new constant.
	(twittering-modeline-active): defined as a constat.
	(twittering-modeline-inactive): likewise.
	(twittering-mode-init-global): remove the call of
	`twittering-init-mode-line-icons'.

	* twittering-mode.el: Display the buffer state as
	`mode-line-buffer-identification' instead of `mode-name'.
	(twittering-mode-line-buffer-identification): new function for
	generating a mode-line string for `twittering-mode'.
	(twittering-mode-string): removed.
	(twittering-modeline-ssl): remove brackets from the mode-line
	string.
	(twittering-modeline-active): use a whitespace with `display' face
	as a mode-line string.
	(twittering-modeline-inactive): remove brackets from the mode-line
	string.
	(twittering-update-mode-line): call `force-mode-line-update' only.